--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
@@ -11,16 +11,26 @@
 
     <h1>Ejercicios Tarea Unidad 1: Segunda parte</h1>
 
-    <script>
+    <script type="text/javaScript">
         /*1.-Cadenas ordenadas
         Pida dos cadenas. Muéstrelos en ordenadas de mayor a menor. 
         Por ejemplo "zz" es menor que "aa".
         */
+
+        //Mostramos el título del ejercicio
         document.write("<br>Cadenas ordenadas<br>");
 
+        //Solicitamos las cadenas
         let cadena1 = prompt("Introduce la primera cadena");
         let cadena2 = prompt("Introduce la segunda cadena");
 
+        //Comprobamos que las cadenas no estén vacías
+        if (cadena1 == "" || cadena2 == "") {
+            document.write("No se admiten cadenas vacías");
+            exit();
+        }
+        //Comprobamos si las cadenas son iguales, mayores o menores
+        //Mostramos el resultado
         if (cadena1 > cadena2) {
             document.write(cadena1 + " es mayor que " + cadena2);
         } else if (cadena1 < cadena2) {
@@ -41,37 +51,50 @@
         Se debe realizar la misma tarea con tres bucles diferentes.
         Debes comprar que sea número.  No debes aceptar números negativos.
         Debes comprar los límites mayores y menores de los mismos. Por ejemplo, que no sea inicio 10, fin  1 e incremento 1 ya que el bucle no termina*/
+
+        //Mostramos un separador y el título del ejercicio
         document.write("<hr><br>Listado de números<br>");
 
+        //Solicitamos los números
         let numeroInicial = parseInt(prompt("Introduce el primer número"));
         let numeroFinal = parseInt(prompt("Introduce el segundo número"));
         let incremento = parseInt(prompt("Introduce el incremento"));
 
-        if (numeroInicial > 0 && numeroFinal > 0 && incremento > 0) {
+        //Comprobamos que los números sean positivos
+        if (numeroInicial >= 0 && numeroFinal >= 0 && incremento > 0) {
 
+            //Comprobamos que el número inicial sea menor que el número final
             if (numeroInicial < numeroFinal) {
 
+                //Mostramos el resultado con un bucle for
                 document.write("Con bucle For:<br>");
                 for (let i = numeroInicial; i <= numeroFinal; i += incremento) {
                     document.write(i + " ");
                 }
+                //Mostramos el resultado con un bucle while
                 document.write("<br>Con bucle while:<br>");
                 i = numeroInicial;
                 while (i <= numeroFinal) {
                     document.write(i + " ");
                     i += incremento;
                 }
+                //Mostramos el resultado con un bucle do while
                 document.write("<br>Con bucle do while:<br>");
                 i = numeroInicial;
                 do {
                     document.write(i + " ");
                     i += incremento;
                 } while (i <= numeroFinal);
-            } else {
+            } else { 
+                //Si el número inicial es mayor que el número final o el incremento no es mayor de 0,
+                //mostramos un mensaje de error y salimos del programa
                 document.write("El orden de los números introducidos no es correcto");
+                exit();
             }
         } else {
+            //Si los números no son positivos, mostramos un mensaje de error y salimos del programa
             document.write("Sólo se admiten números positivos");
+            exit();
         }
 
 
@@ -80,23 +103,30 @@
         2.-El algoritmo de restas sucesivas para realizar la división entera de dos números positivos. Este algoritmo consiste en ir restando al dividendo el divisor hasta obtener un resultado menor que el divisor, que será el resto de la división. El número de restas efectuado será el cociente.
         3.-Mostrar el resultado el resto y el cociente.*/
 
+        //Mostramos un separador y el título del ejercicio
         document.write("<hr><br>División por restas sucesivas<br>");
 
+        //Solicitamos los números
         let dividendo = parseInt(prompt("Introduce el dividendo"));
         let divisor = parseInt(prompt("Introduce el divisor"));
         let cociente = 0;
         let aux = dividendo;
 
+        //Compromabos que los números sean positivos
         if (dividendo > 0 && divisor > 0) {
+            //Realizamos la división por restas sucesivas
             do {
+                //Si el dividendo es menor que el divisor, el cociente es 0 y el resto es el dividendo
+                //Si el dividendo es mayor que el divisor, el cociente es 1 y el resto es el dividendo menos el divisor
                 aux -= divisor;
                 cociente++;
             } while (aux >= divisor);
+            //Mostramos el resultado
             document.write("Para el dividendo " + dividendo + " y divisor " + divisor + ",el cociente es " + cociente + " y el resto es " + aux + ".");
         } else {
+            //Si los números no son positivos, mostramos un mensaje de error
             document.write("Sólo se admiten números positivos");
         }
-
     </script>
 
 </body>
