--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
@@ -75,6 +75,7 @@
                 document.write("<br>Con bucle while:<br>");
                 i = numeroInicial;
                 while (i <= numeroFinal) {
+                    //mostar el número y un espacio para que no salgan todos seguidos
                     document.write(i + " ");
                     i += incremento;
                 }
