adding strict mode

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
@@ -12,6 +12,8 @@
     <h1>Ejercicios Tarea Unidad 1: Segunda parte</h1>
 
     <script type="text/javaScript">
+        //añadimos el modo estricto para que no permita usar variables no declaradas y tener un código más limpio y seguro
+        "use strict";
         /*1.-Cadenas ordenadas
         Pida dos cadenas. Muéstrelos en ordenadas de mayor a menor. 
         Por ejemplo "zz" es menor que "aa".
