adding reference to old version

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea01/index.html
@@ -9,6 +9,9 @@
 
 <body>
 
+    <!--En esta version se usan etiquetas HTML vacias que con JavaScript son rellenadas en tiempo de ejecucion usando la API para manipular el DOM-->
+    <!--Version con document.write en https://github.com/andresito87/DWEC/blob/333e463e6d731c9d0cc7ae9d2ad23671235d3ba3/Podadera_Gonz%C3%A1lez_Andr%C3%A9s_Samuel_DWEC_Tarea01/index.html-->
+
     <h1>Ejercicios Tarea Unidad 1: Segunda parte</h1>
 
     <h2>Cadenas Ordenadas</h2>
