adding styles to index.html

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andres Samuel Podadera Gonzalez - DWEC Tarea Unidad 3</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
+    <script type="module" src="./main.js"></script>
+    <title>ESPÍAS - DWEC Tarea Unidad 3</title>
 </head>
 
 <body>
-    <p id="salida">Este contenido va a ser cambiado.</p>
+
+    <header>
+        <h1>ESPÍAS - DWEC Tarea Unidad 3</h1>
+    </header>
+
+    <p id="contenido" style="text-align: center; justify-content:center;">Este contenido va a ser cambiado.</p>
+
+    <footer>
+        <p>© 2023 - Andrés Samuel Podadera González</p>
 </body>
-<script type="module" src="./main.js"></script>
 
 </html>
