--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
@@ -15,7 +15,7 @@
         <h1>ESPÍAS - DWEC Tarea Unidad 3</h1>
     </header>
 
-    <p id="contenido" style="text-align: center; justify-content:center;">Este contenido va a ser cambiado.</p>
+    <p id="contenido">Este contenido va a ser cambiado.</p>
 
     <footer>
         <p>© 2023 - Andrés Samuel Podadera González</p>
