--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
@@ -5,20 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" type="text/css">
-    <script type="module" src="./main.js"></script>
     <title>ESPÍAS - DWEC Tarea Unidad 3</title>
 </head>
 
 <body>
-
+    <!-- TODO: CAmbiar el nombre de las clases a inglés -->
+    <!-- Cabecera -->
     <header>
         <h1>ESPÍAS - DWEC Tarea Unidad 3</h1>
     </header>
 
-    <p id="contenido">Este contenido va a ser cambiado.</p>
+    <!-- Contenido -->
+    <p id="contenido">Este contenido va a ser modificado.</p>
 
+    <!-- Pie de página -->
     <footer>
         <p>© 2023 - Andrés Samuel Podadera González</p>
+    </footer>
+
+    <!-- Código JavaScript -->
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
