refactoring to english

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
@@ -9,16 +9,15 @@
 </head>
 
 <body>
-    <!-- TODO: CAmbiar el nombre de las clases a inglés -->
-    <!-- Cabecera -->
+    <!-- Header -->
     <header>
         <h1>ESPÍAS - DWEC Tarea Unidad 3</h1>
     </header>
 
-    <!-- Contenido -->
+    <!-- Body Content -->
     <p id="contenido">Este contenido va a ser modificado.</p>
 
-    <!-- Pie de página -->
+    <!-- Footer -->
     <footer>
         <p>© 2023 - Andrés Samuel Podadera González</p>
     </footer>
