--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea03/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="icon" href="icon.png" type="jpg" sizes="32x32">
     <title>ESPÍAS - DWEC Tarea Unidad 3</title>
 </head>
 
