--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea05/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea05/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Contenedor principal -->
     <script src="./index.js"></script>
 </body>
 
