agregando funcionalidad a la tarea

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
@@ -29,7 +29,7 @@
             <input type="text" id="ciudad" placeholder="Introduce una ciudad">
             <button id="buscar">Tiempo actual</button>
             <button id="prevision">Previsión para 10 días</button>
-            <button id="localizacion">Localizacion</button>
+            <button id="boton_localizacion">Localizacion</button>
         </div>
         <div id="tiempo_actual">
             <div id="info_lugar">
@@ -41,7 +41,6 @@
             <div id="mapa"></div>
         </div>
         <div id="prevision_tiempo">
-            Conjunto de 10 tarjetas con la previsión del tiempo para los próximos 10 días
         </div>
         <div id="localizacion">
             <div id="map"></div>
