--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
@@ -27,20 +27,20 @@
     <main>
         <div id="inputs_botones">
             <input type="text" id="ciudad" placeholder="Introduce una ciudad">
-            <button id="buscar">Tiempo actual</button>
-            <button id="prevision">Previsión para 10 días</button>
-            <button id="boton_localizacion">Localizacion</button>
+            <button id="botonPrevisionDiaActual">Tiempo actual</button>
+            <button id="botonPrevision10Dias">Previsión para 10 días</button>
+            <button id="botonLocalizacion">Localizacion</button>
         </div>
-        <div id="tiempo_actual">
+        <div id="tiempoActual">
             <div id="info_lugar">
                 <p id="poblacion"></p>
-                <p id="país"></p>
+                <p id="pais"></p>
                 <p id="region"></p>
             </div>
-            <div id="tarjeta_tiempo"></div>
+            <div id="tarjetaTiempo"></div>
             <div id="mapa"></div>
         </div>
-        <div id="prevision_tiempo">
+        <div id="prevision10Dias">
         </div>
         <div id="localizacion">
             <div id="map"></div>
