completando la tarea 6

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
@@ -31,11 +31,23 @@
             <button id="botonPrevision10Dias">Previsión para 10 días</button>
             <button id="botonLocalizacion">Localizacion</button>
         </div>
+        <div id="cargando">
+            <img id="imagenCargando" src="./images/cargando.gif" alt="Cargando">
+        </div>
         <div id="tiempoActual">
             <div id="info_lugar">
-                <p id="poblacion"></p>
-                <p id="pais"></p>
-                <p id="region"></p>
+                <div id="divPoblacion">
+                    <p class="titulo">Población</p>
+                    <p id="poblacion"></p>
+                </div>
+                <div id="divPais">
+                    <p class="titulo">País</p>
+                    <p id="pais"></p>
+                </div>
+                <div id="divRegion">
+                    <p class="titulo">Región</p>
+                    <p id="region"></p>
+                </div>
             </div>
             <div id="tarjetaTiempo"></div>
             <div id="mapa"></div>
