completada funcionalidad de prevision para dia actual y proximos 10 dias

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
@@ -29,7 +29,7 @@
         <div id="inputs_botones">
             <input type="text" id="ciudad" placeholder="Ciudad,País">
             <button id="botonPrevisionDiaActual">Tiempo actual</button>
-            <button id="botonPrevision10Dias">Previsión para 10 días</button>
+            <button id="botonPrevisionProximos10Dias">Previsión para 10 días</button>
             <button id="botonLocalizacion">Localizacion</button>
         </div>
         <div id="cargando">
@@ -59,8 +59,8 @@
         </div>
         <div id="prevision10Dias">
         </div>
-        <div id="local">
-            <div id="mapaaaaaaa"></div>
+        <div id="geolocalizacion">
+            <div id="mapaGeolocalizacion"></div>
         </div>
     </main>
 
