antes de insertar jquery

--- a/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
+++ b/Podadera_González_Andrés_Samuel_DWEC_Tarea06/Podadera_Gonzalez_Andres_Samuel_DWEC_Tarea06/index.html
@@ -25,7 +25,7 @@
         <h1>Aplicación del tiempo - Tarea 06 - Andrés Samuel Podadera González</h1>
     </header>
     <main>
-        <h2>Intoduce la ciudad para la que deseas conocer su previsión:</h2>
+        <h2>Introduce la ciudad para la que deseas conocer su previsión:</h2>
         <div id="inputs_botones">
             <input type="text" id="ciudad" placeholder="Ciudad,País">
             <button id="botonPrevisionDiaActual">Tiempo actual</button>
