añadiendo ejemplos de clases y objetos

--- a/ExamenJunioDWEC/Ejercicio_Quokkas_Repaso_Examen_Junio/index.html
+++ b/ExamenJunioDWEC/Ejercicio_Quokkas_Repaso_Examen_Junio/index.html
@@ -33,18 +33,18 @@
 </head>
 
 <body>
-    <h1>Formulario de adopcion de Quokkas</h1>
+    <h1>Formulario de adopción de Quokkas</h1>
     <form action="./index.html" method="post">
         <label for="nombre">
-            Nombre:
+            Nombre:(Ejemplo: Pepito Perez)
             <input type="text" name="nombre" id="nombre">
         </label>
         <label for="humanoAdoptador">
-            Humano adoptador:
+            Humano adoptador:(Ejemplo: *cod,quokka)
             <input type="password" name="humanoAdoptador" id="humanoAdoptador">
         </label>
         <label for="donacionAnual">
-            Donación anual:
+            Donación anual:(Números)
             <input type="text" name="donacionAnual" id="donacionAnual">
         </label>
         <input type="submit" value="Enviar" id="botonEnviarFormulario">
